Adopt Tweaks & Optimizations from Madus
Courtesy of https://github.com/magnusulf/MassiveCore